--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,9 @@
     <title></title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!-- <input type="color" id="colorPicker" value="#000000"> -->
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
